--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,3 @@
 <h1>仕事力診断#home</h1>
 <p>Find me in app/views/static_pages/home.html.erb</p>
+<%= button_to "ボタン", {controller: 'static_pages', action: 'help'}, {method: :get} %>
