--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,3 @@
 <h1>仕事力診断#home</h1>
 <p>Find me in app/views/static_pages/home.html.erb</p>
-<%= button_to "問題セット1を始める", {controller: 'static_pages', action: 'start1'}, {method: :get} %>
+<%= button_to "問題セット1を始める", {controller: 'static_pages', action: 'help'}, {method: :get} %>
